--- a/css/materialdesignicons.css
+++ b/css/materialdesignicons.css
@@ -1,8 +1,8 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url("../fonts/materialdesignicons-webfont.eot?v=2.1.19");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.1.19") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.1.19") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.1.19") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.1.19") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.1.19#materialdesigniconsregular") format("svg");
+  src: url("../fonts/materialdesignicons-webfont.eot?v=2.1.99");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.1.99") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.1.99") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.1.99") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.1.99") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.1.99#materialdesigniconsregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -59,6 +59,10 @@
 
 .mdi-account-edit:before {
   content: "\F6BB";
+}
+
+.mdi-account-group:before {
+  content: "\F848";
 }
 
 .mdi-account-key:before {
@@ -137,6 +141,10 @@
   content: "\F019";
 }
 
+.mdi-accusoft:before {
+  content: "\F849";
+}
+
 .mdi-adjust:before {
   content: "\F01A";
 }
@@ -167,6 +175,10 @@
 
 .mdi-airplay:before {
   content: "\F01F";
+}
+
+.mdi-airport:before {
+  content: "\F84A";
 }
 
 .mdi-alarm:before {
@@ -401,6 +413,10 @@
   content: "\F791";
 }
 
+.mdi-arrow-collapse-horizontal:before {
+  content: "\F84B";
+}
+
 .mdi-arrow-collapse-left:before {
   content: "\F792";
 }
@@ -411,6 +427,10 @@
 
 .mdi-arrow-collapse-up:before {
   content: "\F794";
+}
+
+.mdi-arrow-collapse-vertical:before {
+  content: "\F84C";
 }
 
 .mdi-arrow-down:before {
@@ -469,6 +489,10 @@
   content: "\F795";
 }
 
+.mdi-arrow-expand-horizontal:before {
+  content: "\F84D";
+}
+
 .mdi-arrow-expand-left:before {
   content: "\F796";
 }
@@ -479,6 +503,10 @@
 
 .mdi-arrow-expand-up:before {
   content: "\F798";
+}
+
+.mdi-arrow-expand-vertical:before {
+  content: "\F84E";
 }
 
 .mdi-arrow-left:before {
@@ -653,6 +681,10 @@
   content: "\F067";
 }
 
+.mdi-augmented-reality:before {
+  content: "\F84F";
+}
+
 .mdi-auto-fix:before {
   content: "\F068";
 }
@@ -693,6 +725,10 @@
   content: "\F06F";
 }
 
+.mdi-badminton:before {
+  content: "\F850";
+}
+
 .mdi-bandcamp:before {
   content: "\F674";
 }
@@ -715,6 +751,14 @@
 
 .mdi-barrel:before {
   content: "\F074";
+}
+
+.mdi-baseball:before {
+  content: "\F851";
+}
+
+.mdi-baseball-bat:before {
+  content: "\F852";
 }
 
 .mdi-basecamp:before {
@@ -1171,6 +1215,10 @@
 
 .mdi-border-vertical:before {
   content: "\F0D2";
+}
+
+.mdi-bottle-wine:before {
+  content: "\F853";
 }
 
 .mdi-bow-tie:before {
@@ -1741,6 +1789,10 @@
   content: "\F5E1";
 }
 
+.mdi-check-outline:before {
+  content: "\F854";
+}
+
 .mdi-checkbox-blank:before {
   content: "\F12E";
 }
@@ -1755,6 +1807,10 @@
 
 .mdi-checkbox-blank-outline:before {
   content: "\F131";
+}
+
+.mdi-checkbox-intermediate:before {
+  content: "\F855";
 }
 
 .mdi-checkbox-marked:before {
@@ -1811,6 +1867,30 @@
 
 .mdi-chemical-weapon:before {
   content: "\F13B";
+}
+
+.mdi-chess-bishop:before {
+  content: "\F85B";
+}
+
+.mdi-chess-king:before {
+  content: "\F856";
+}
+
+.mdi-chess-knight:before {
+  content: "\F857";
+}
+
+.mdi-chess-pawn:before {
+  content: "\F858";
+}
+
+.mdi-chess-queen:before {
+  content: "\F859";
+}
+
+.mdi-chess-rook:before {
+  content: "\F85A";
 }
 
 .mdi-chevron-double-down:before {
@@ -1915,6 +1995,14 @@
 
 .mdi-clipboard-plus:before {
   content: "\F750";
+}
+
+.mdi-clipboard-pulse:before {
+  content: "\F85C";
+}
+
+.mdi-clipboard-pulse-outline:before {
+  content: "\F85D";
 }
 
 .mdi-clipboard-text:before {
@@ -2161,6 +2249,10 @@
   content: "\F180";
 }
 
+.mdi-comment-multiple:before {
+  content: "\F85E";
+}
+
 .mdi-comment-multiple-outline:before {
   content: "\F181";
 }
@@ -2199,6 +2291,14 @@
 
 .mdi-comment-text:before {
   content: "\F188";
+}
+
+.mdi-comment-text-multiple:before {
+  content: "\F85F";
+}
+
+.mdi-comment-text-multiple-outline:before {
+  content: "\F860";
 }
 
 .mdi-comment-text-outline:before {
@@ -2297,6 +2397,10 @@
   content: "\F19A";
 }
 
+.mdi-crane:before {
+  content: "\F861";
+}
+
 .mdi-creation:before {
   content: "\F1C9";
 }
@@ -2385,6 +2489,14 @@
   content: "\F1AB";
 }
 
+.mdi-curling:before {
+  content: "\F862";
+}
+
+.mdi-currency-bdt:before {
+  content: "\F863";
+}
+
 .mdi-currency-btc:before {
   content: "\F1AC";
 }
@@ -2419,6 +2531,10 @@
 
 .mdi-currency-krw:before {
   content: "\F7BC";
+}
+
+.mdi-currency-kzt:before {
+  content: "\F864";
 }
 
 .mdi-currency-ngn:before {
@@ -2479,6 +2595,10 @@
 
 .mdi-database-plus:before {
   content: "\F1BA";
+}
+
+.mdi-database-search:before {
+  content: "\F865";
 }
 
 .mdi-debug-step-into:before {
@@ -2605,6 +2725,10 @@
   content: "\F76E";
 }
 
+.mdi-dice-d12:before {
+  content: "\F866";
+}
+
 .mdi-dice-d20:before {
   content: "\F5EA";
 }
@@ -2685,6 +2809,10 @@
   content: "\F698";
 }
 
+.mdi-docker:before {
+  content: "\F867";
+}
+
 .mdi-dolby:before {
   content: "\F6B2";
 }
@@ -2707,6 +2835,10 @@
 
 .mdi-door-open:before {
   content: "\F81B";
+}
+
+.mdi-doorbell-video:before {
+  content: "\F868";
 }
 
 .mdi-dots-horizontal:before {
@@ -2929,6 +3061,10 @@
   content: "\F1FF";
 }
 
+.mdi-ethereum:before {
+  content: "\F869";
+}
+
 .mdi-ethernet:before {
   content: "\F200";
 }
@@ -2983,6 +3119,22 @@
 
 .mdi-eye-outline:before {
   content: "\F6CF";
+}
+
+.mdi-eye-plus:before {
+  content: "\F86A";
+}
+
+.mdi-eye-plus-outline:before {
+  content: "\F86B";
+}
+
+.mdi-eye-settings:before {
+  content: "\F86C";
+}
+
+.mdi-eye-settings-outline:before {
+  content: "\F86D";
 }
 
 .mdi-eyedropper:before {
@@ -3147,6 +3299,10 @@
 
 .mdi-file-presentation-box:before {
   content: "\F229";
+}
+
+.mdi-file-question:before {
+  content: "\F86E";
 }
 
 .mdi-file-restore:before {
@@ -3371,6 +3527,10 @@
 
 .mdi-folder-multiple-outline:before {
   content: "\F255";
+}
+
+.mdi-folder-network:before {
+  content: "\F86F";
 }
 
 .mdi-folder-open:before {
@@ -3749,6 +3909,10 @@
   content: "\F295";
 }
 
+.mdi-function-variant:before {
+  content: "\F870";
+}
+
 .mdi-gamepad:before {
   content: "\F296";
 }
@@ -3759,6 +3923,10 @@
 
 .mdi-garage:before {
   content: "\F6D8";
+}
+
+.mdi-garage-alert:before {
+  content: "\F871";
 }
 
 .mdi-garage-open:before {
@@ -3779,6 +3947,18 @@
 
 .mdi-gauge:before {
   content: "\F29A";
+}
+
+.mdi-gauge-empty:before {
+  content: "\F872";
+}
+
+.mdi-gauge-full:before {
+  content: "\F873";
+}
+
+.mdi-gauge-low:before {
+  content: "\F874";
 }
 
 .mdi-gavel:before {
@@ -3861,6 +4041,10 @@
   content: "\F6DA";
 }
 
+.mdi-glass-cocktail:before {
+  content: "\F356";
+}
+
 .mdi-glass-flute:before {
   content: "\F2A5";
 }
@@ -3875,6 +4059,10 @@
 
 .mdi-glass-tulip:before {
   content: "\F2A8";
+}
+
+.mdi-glass-wine:before {
+  content: "\F875";
 }
 
 .mdi-glassdoor:before {
@@ -4007,6 +4195,10 @@
 
 .mdi-gradient:before {
   content: "\F69F";
+}
+
+.mdi-graphql:before {
+  content: "\F876";
 }
 
 .mdi-grease-pencil:before {
@@ -4177,12 +4369,24 @@
   content: "\F7CE";
 }
 
+.mdi-high-definition-box:before {
+  content: "\F877";
+}
+
 .mdi-highway:before {
   content: "\F5F7";
 }
 
 .mdi-history:before {
   content: "\F2DA";
+}
+
+.mdi-hockey-puck:before {
+  content: "\F878";
+}
+
+.mdi-hockey-sticks:before {
+  content: "\F879";
 }
 
 .mdi-hololens:before {
@@ -4195,6 +4399,10 @@
 
 .mdi-home-account:before {
   content: "\F825";
+}
+
+.mdi-home-alert:before {
+  content: "\F87A";
 }
 
 .mdi-home-assistant:before {
@@ -4389,6 +4597,10 @@
   content: "\F82A";
 }
 
+.mdi-image-plus:before {
+  content: "\F87B";
+}
+
 .mdi-import:before {
   content: "\F2FA";
 }
@@ -4451,6 +4663,10 @@
 
 .mdi-jira:before {
   content: "\F303";
+}
+
+.mdi-jquery:before {
+  content: "\F87C";
 }
 
 .mdi-jsfiddle:before {
@@ -4721,6 +4937,10 @@
   content: "\F334";
 }
 
+.mdi-lifebuoy:before {
+  content: "\F87D";
+}
+
 .mdi-lightbulb:before {
   content: "\F335";
 }
@@ -4925,10 +5145,6 @@
   content: "\F355";
 }
 
-.mdi-martini:before {
-  content: "\F356";
-}
-
 .mdi-material-ui:before {
   content: "\F357";
 }
@@ -5129,6 +5345,10 @@
   content: "\F62A";
 }
 
+.mdi-mixed-reality:before {
+  content: "\F87E";
+}
+
 .mdi-mixer:before {
   content: "\F7DC";
 }
@@ -5251,6 +5471,10 @@
 
 .mdi-music-off:before {
   content: "\F75A";
+}
+
+.mdi-nativescript:before {
+  content: "\F87F";
 }
 
 .mdi-nature:before {
@@ -5561,6 +5785,10 @@
   content: "\F746";
 }
 
+.mdi-onepassword:before {
+  content: "\F880";
+}
+
 .mdi-opacity:before {
   content: "\F5CC";
 }
@@ -5697,6 +5925,10 @@
   content: "\F7E2";
 }
 
+.mdi-patreon:before {
+  content: "\F881";
+}
+
 .mdi-pause:before {
   content: "\F3E4";
 }
@@ -5723,6 +5955,14 @@
 
 .mdi-paw-off:before {
   content: "\F657";
+}
+
+.mdi-paypal:before {
+  content: "\F882";
+}
+
+.mdi-peace:before {
+  content: "\F883";
 }
 
 .mdi-pen:before {
@@ -5841,6 +6081,14 @@
   content: "\F82E";
 }
 
+.mdi-phone-rotate-landscape:before {
+  content: "\F884";
+}
+
+.mdi-phone-rotate-portrait:before {
+  content: "\F885";
+}
+
 .mdi-phone-settings:before {
   content: "\F3FD";
 }
@@ -5859,6 +6107,14 @@
 
 .mdi-piano:before {
   content: "\F67C";
+}
+
+.mdi-pier:before {
+  content: "\F886";
+}
+
+.mdi-pier-crane:before {
+  content: "\F887";
 }
 
 .mdi-pig:before {
@@ -5905,8 +6161,16 @@
   content: "\F7E5";
 }
 
+.mdi-pipe-leak:before {
+  content: "\F888";
+}
+
 .mdi-pistol:before {
   content: "\F702";
+}
+
+.mdi-piston:before {
+  content: "\F889";
 }
 
 .mdi-pizza:before {
@@ -5931,6 +6195,10 @@
 
 .mdi-play-circle-outline:before {
   content: "\F40D";
+}
+
+.mdi-play-network:before {
+  content: "\F88A";
 }
 
 .mdi-play-pause:before {
@@ -6285,6 +6553,10 @@
   content: "\F453";
 }
 
+.mdi-reminder:before {
+  content: "\F88B";
+}
+
 .mdi-remote:before {
   content: "\F454";
 }
@@ -6389,6 +6661,10 @@
   content: "\F463";
 }
 
+.mdi-room-service:before {
+  content: "\F88C";
+}
+
 .mdi-roomba:before {
   content: "\F70C";
 }
@@ -6451,6 +6727,10 @@
 
 .mdi-sale:before {
   content: "\F46F";
+}
+
+.mdi-salesforce:before {
+  content: "\F88D";
 }
 
 .mdi-sass:before {
@@ -6551,6 +6831,10 @@
 
 .mdi-security:before {
   content: "\F483";
+}
+
+.mdi-security-account:before {
+  content: "\F88E";
 }
 
 .mdi-security-home:before {
@@ -7377,6 +7661,10 @@
   content: "\F4FF";
 }
 
+.mdi-teach:before {
+  content: "\F88F";
+}
+
 .mdi-teamviewer:before {
   content: "\F500";
 }
@@ -7475,6 +7763,10 @@
 
 .mdi-thermometer-lines:before {
   content: "\F510";
+}
+
+.mdi-thermostat-box:before {
+  content: "\F890";
 }
 
 .mdi-thought-bubble:before {
@@ -7619,6 +7911,10 @@
 
 .mdi-trackpad:before {
   content: "\F7F7";
+}
+
+.mdi-tractor:before {
+  content: "\F891";
 }
 
 .mdi-traffic-light:before {
@@ -7893,6 +8189,10 @@
   content: "\F55C";
 }
 
+.mdi-vector-ellipse:before {
+  content: "\F892";
+}
+
 .mdi-vector-intersection:before {
   content: "\F55D";
 }
@@ -8057,6 +8357,10 @@
   content: "\F60F";
 }
 
+.mdi-virtual-reality:before {
+  content: "\F893";
+}
+
 .mdi-visualstudio:before {
   content: "\F610";
 }
@@ -8161,8 +8465,20 @@
   content: "\F58A";
 }
 
+.mdi-watch-export-variant:before {
+  content: "\F894";
+}
+
 .mdi-watch-import:before {
   content: "\F58B";
+}
+
+.mdi-watch-import-variant:before {
+  content: "\F895";
+}
+
+.mdi-watch-variant:before {
+  content: "\F896";
 }
 
 .mdi-watch-vibrate:before {
@@ -8203,6 +8519,10 @@
 
 .mdi-weather-hail:before {
   content: "\F592";
+}
+
+.mdi-weather-hurricane:before {
+  content: "\F897";
 }
 
 .mdi-weather-lightning:before {
