--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "2.1.19" !default;
+$mdi-version:          "2.1.99" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -19,6 +19,7 @@ $mdi-icons: (
     "account-circle": F009,
     "account-convert": F00A,
     "account-edit": F6BB,
+    "account-group": F848,
     "account-key": F00B,
     "account-location": F00C,
     "account-minus": F00D,
@@ -38,6 +39,7 @@ $mdi-icons: (
     "account-settings-variant": F631,
     "account-star": F017,
     "account-switch": F019,
+    "accusoft": F849,
     "adjust": F01A,
     "air-conditioner": F01B,
     "airballoon": F01C,
@@ -46,6 +48,7 @@ $mdi-icons: (
     "airplane-off": F01E,
     "airplane-takeoff": F5D5,
     "airplay": F01F,
+    "airport": F84A,
     "alarm": F020,
     "alarm-bell": F78D,
     "alarm-check": F021,
@@ -104,9 +107,11 @@ $mdi-icons: (
     "arrow-collapse": F615,
     "arrow-collapse-all": F044,
     "arrow-collapse-down": F791,
+    "arrow-collapse-horizontal": F84B,
     "arrow-collapse-left": F792,
     "arrow-collapse-right": F793,
     "arrow-collapse-up": F794,
+    "arrow-collapse-vertical": F84C,
     "arrow-down": F045,
     "arrow-down-bold": F72D,
     "arrow-down-bold-box": F72E,
@@ -121,9 +126,11 @@ $mdi-icons: (
     "arrow-expand": F616,
     "arrow-expand-all": F04C,
     "arrow-expand-down": F795,
+    "arrow-expand-horizontal": F84D,
     "arrow-expand-left": F796,
     "arrow-expand-right": F797,
     "arrow-expand-up": F798,
+    "arrow-expand-vertical": F84E,
     "arrow-left": F04D,
     "arrow-left-bold": F730,
     "arrow-left-bold-box": F731,
@@ -167,6 +174,7 @@ $mdi-icons: (
     "atom": F767,
     "attachment": F066,
     "audiobook": F067,
+    "augmented-reality": F84F,
     "auto-fix": F068,
     "auto-upload": F069,
     "autorenew": F06A,
@@ -177,12 +185,15 @@ $mdi-icons: (
     "backburger": F06D,
     "backspace": F06E,
     "backup-restore": F06F,
+    "badminton": F850,
     "bandcamp": F674,
     "bank": F070,
     "barcode": F071,
     "barcode-scan": F072,
     "barley": F073,
     "barrel": F074,
+    "baseball": F851,
+    "baseball-bat": F852,
     "basecamp": F075,
     "basket": F076,
     "basket-fill": F077,
@@ -297,6 +308,7 @@ $mdi-icons: (
     "border-style": F0D0,
     "border-top": F0D1,
     "border-vertical": F0D2,
+    "bottle-wine": F853,
     "bow-tie": F677,
     "bowl": F617,
     "bowling": F0D3,
@@ -439,10 +451,12 @@ $mdi-icons: (
     "check-all": F12D,
     "check-circle": F5E0,
     "check-circle-outline": F5E1,
+    "check-outline": F854,
     "checkbox-blank": F12E,
     "checkbox-blank-circle": F12F,
     "checkbox-blank-circle-outline": F130,
     "checkbox-blank-outline": F131,
+    "checkbox-intermediate": F855,
     "checkbox-marked": F132,
     "checkbox-marked-circle": F133,
     "checkbox-marked-circle-outline": F134,
@@ -457,6 +471,12 @@ $mdi-icons: (
     "checkbox-multiple-marked-outline": F139,
     "checkerboard": F13A,
     "chemical-weapon": F13B,
+    "chess-bishop": F85B,
+    "chess-king": F856,
+    "chess-knight": F857,
+    "chess-pawn": F858,
+    "chess-queen": F859,
+    "chess-rook": F85A,
     "chevron-double-down": F13C,
     "chevron-double-left": F13D,
     "chevron-double-right": F13E,
@@ -483,6 +503,8 @@ $mdi-icons: (
     "clipboard-flow": F6C7,
     "clipboard-outline": F14D,
     "clipboard-plus": F750,
+    "clipboard-pulse": F85C,
+    "clipboard-pulse-outline": F85D,
     "clipboard-text": F14E,
     "clippy": F14F,
     "clock": F150,
@@ -544,6 +566,7 @@ $mdi-icons: (
     "comment-alert-outline": F17E,
     "comment-check": F17F,
     "comment-check-outline": F180,
+    "comment-multiple": F85E,
     "comment-multiple-outline": F181,
     "comment-outline": F182,
     "comment-plus-outline": F183,
@@ -554,6 +577,8 @@ $mdi-icons: (
     "comment-remove": F5DE,
     "comment-remove-outline": F187,
     "comment-text": F188,
+    "comment-text-multiple": F85F,
+    "comment-text-multiple-outline": F860,
     "comment-text-outline": F189,
     "compare": F18A,
     "compass": F18B,
@@ -578,6 +603,7 @@ $mdi-icons: (
     "corn": F7B7,
     "counter": F199,
     "cow": F19A,
+    "crane": F861,
     "creation": F1C9,
     "credit-card": F19B,
     "credit-card-multiple": F19C,
@@ -600,6 +626,8 @@ $mdi-icons: (
     "cup": F1AA,
     "cup-off": F5E5,
     "cup-water": F1AB,
+    "curling": F862,
+    "currency-bdt": F863,
     "currency-btc": F1AC,
     "currency-chf": F7B8,
     "currency-cny": F7B9,
@@ -609,6 +637,7 @@ $mdi-icons: (
     "currency-inr": F1AF,
     "currency-jpy": F7BB,
     "currency-krw": F7BC,
+    "currency-kzt": F864,
     "currency-ngn": F1B0,
     "currency-rub": F1B1,
     "currency-sign": F7BD,
@@ -624,6 +653,7 @@ $mdi-icons: (
     "database": F1B8,
     "database-minus": F1B9,
     "database-plus": F1BA,
+    "database-search": F865,
     "debug-step-into": F1BB,
     "debug-step-out": F1BC,
     "debug-step-over": F1BD,
@@ -655,6 +685,7 @@ $mdi-icons: (
     "dice-5": F1CE,
     "dice-6": F1CF,
     "dice-d10": F76E,
+    "dice-d12": F866,
     "dice-d20": F5EA,
     "dice-d4": F5EB,
     "dice-d6": F5EC,
@@ -675,12 +706,14 @@ $mdi-icons: (
     "dns": F1D6,
     "do-not-disturb": F697,
     "do-not-disturb-off": F698,
+    "docker": F867,
     "dolby": F6B2,
     "domain": F1D7,
     "donkey": F7C1,
     "door": F819,
     "door-closed": F81A,
     "door-open": F81B,
+    "doorbell-video": F868,
     "dots-horizontal": F1D8,
     "dots-horizontal-circle": F7C2,
     "dots-vertical": F1D9,
@@ -736,6 +769,7 @@ $mdi-icons: (
     "eraser": F1FE,
     "eraser-variant": F642,
     "escalator": F1FF,
+    "ethereum": F869,
     "ethernet": F200,
     "ethernet-cable": F201,
     "ethernet-cable-off": F202,
@@ -750,6 +784,10 @@ $mdi-icons: (
     "eye-off": F209,
     "eye-off-outline": F6D0,
     "eye-outline": F6CF,
+    "eye-plus": F86A,
+    "eye-plus-outline": F86B,
+    "eye-settings": F86C,
+    "eye-settings-outline": F86D,
     "eyedropper": F20A,
     "eyedropper-variant": F20B,
     "face": F643,
@@ -791,6 +829,7 @@ $mdi-icons: (
     "file-powerpoint": F227,
     "file-powerpoint-box": F228,
     "file-presentation-box": F229,
+    "file-question": F86E,
     "file-restore": F670,
     "file-send": F22A,
     "file-tree": F645,
@@ -847,6 +886,7 @@ $mdi-icons: (
     "folder-multiple": F253,
     "folder-multiple-image": F254,
     "folder-multiple-outline": F255,
+    "folder-network": F86F,
     "folder-open": F76F,
     "folder-outline": F256,
     "folder-plus": F257,
@@ -941,14 +981,19 @@ $mdi-icons: (
     "fullscreen": F293,
     "fullscreen-exit": F294,
     "function": F295,
+    "function-variant": F870,
     "gamepad": F296,
     "gamepad-variant": F297,
     "garage": F6D8,
+    "garage-alert": F871,
     "garage-open": F6D9,
     "gas-cylinder": F647,
     "gas-station": F298,
     "gate": F299,
     "gauge": F29A,
+    "gauge-empty": F872,
+    "gauge-full": F873,
+    "gauge-low": F874,
     "gavel": F29B,
     "gender-female": F29C,
     "gender-male": F29D,
@@ -969,10 +1014,12 @@ $mdi-icons: (
     "github-box": F2A3,
     "github-circle": F2A4,
     "github-face": F6DA,
+    "glass-cocktail": F356,
     "glass-flute": F2A5,
     "glass-mug": F2A6,
     "glass-stange": F2A7,
     "glass-tulip": F2A8,
+    "glass-wine": F875,
     "glassdoor": F2A9,
     "glasses": F2AA,
     "gmail": F2AB,
@@ -1006,6 +1053,7 @@ $mdi-icons: (
     "google-translate": F2BF,
     "google-wallet": F2C0,
     "gradient": F69F,
+    "graphql": F876,
     "grease-pencil": F648,
     "grid": F2C1,
     "grid-large": F757,
@@ -1048,11 +1096,15 @@ $mdi-icons: (
     "hexagon-multiple": F6E0,
     "hexagon-outline": F2D9,
     "high-definition": F7CE,
+    "high-definition-box": F877,
     "highway": F5F7,
     "history": F2DA,
+    "hockey-puck": F878,
+    "hockey-sticks": F879,
     "hololens": F2DB,
     "home": F2DC,
     "home-account": F825,
+    "home-alert": F87A,
     "home-assistant": F7CF,
     "home-automation": F7D0,
     "home-circle": F7D1,
@@ -1101,6 +1153,7 @@ $mdi-icons: (
     "image-filter-vintage": F2F8,
     "image-multiple": F2F9,
     "image-off": F82A,
+    "image-plus": F87B,
     "import": F2FA,
     "inbox": F686,
     "inbox-arrow-down": F2FB,
@@ -1117,6 +1170,7 @@ $mdi-icons: (
     "itunes": F676,
     "jeepney": F302,
     "jira": F303,
+    "jquery": F87C,
     "jsfiddle": F304,
     "json": F626,
     "karate": F82B,
@@ -1184,6 +1238,7 @@ $mdi-icons: (
     "library-books": F332,
     "library-music": F333,
     "library-plus": F334,
+    "lifebuoy": F87D,
     "lightbulb": F335,
     "lightbulb-on": F6E7,
     "lightbulb-on-outline": F6E8,
@@ -1235,7 +1290,6 @@ $mdi-icons: (
     "markdown": F354,
     "marker": F652,
     "marker-check": F355,
-    "martini": F356,
     "material-ui": F357,
     "math-compass": F358,
     "matrix": F628,
@@ -1286,6 +1340,7 @@ $mdi-icons: (
     "minus-circle-outline": F377,
     "minus-network": F378,
     "mixcloud": F62A,
+    "mixed-reality": F87E,
     "mixer": F7DC,
     "monitor": F379,
     "monitor-multiple": F37A,
@@ -1317,6 +1372,7 @@ $mdi-icons: (
     "music-note-sixteenth": F38C,
     "music-note-whole": F38D,
     "music-off": F75A,
+    "nativescript": F87F,
     "nature": F38E,
     "nature-people": F38F,
     "navigation": F390,
@@ -1394,6 +1450,7 @@ $mdi-icons: (
     "omega": F3C9,
     "onedrive": F3CA,
     "onenote": F746,
+    "onepassword": F880,
     "opacity": F5CC,
     "open-in-app": F3CB,
     "open-in-new": F3CC,
@@ -1428,6 +1485,7 @@ $mdi-icons: (
     "paperclip": F3E2,
     "parking": F3E3,
     "passport": F7E2,
+    "patreon": F881,
     "pause": F3E4,
     "pause-circle": F3E5,
     "pause-circle-outline": F3E6,
@@ -1435,6 +1493,8 @@ $mdi-icons: (
     "pause-octagon-outline": F3E8,
     "paw": F3E9,
     "paw-off": F657,
+    "paypal": F882,
+    "peace": F883,
     "pen": F3EA,
     "pencil": F3EB,
     "pencil-box": F3EC,
@@ -1464,11 +1524,15 @@ $mdi-icons: (
     "phone-paused": F3FC,
     "phone-plus": F659,
     "phone-return": F82E,
+    "phone-rotate-landscape": F884,
+    "phone-rotate-portrait": F885,
     "phone-settings": F3FD,
     "phone-voip": F3FE,
     "pi": F3FF,
     "pi-box": F400,
     "piano": F67C,
+    "pier": F886,
+    "pier-crane": F887,
     "pig": F401,
     "pill": F402,
     "pillar": F701,
@@ -1480,13 +1544,16 @@ $mdi-icons: (
     "pinterest-box": F408,
     "pipe": F7E4,
     "pipe-disconnected": F7E5,
+    "pipe-leak": F888,
     "pistol": F702,
+    "piston": F889,
     "pizza": F409,
     "plane-shield": F6BA,
     "play": F40A,
     "play-box-outline": F40B,
     "play-circle": F40C,
     "play-circle-outline": F40D,
+    "play-network": F88A,
     "play-pause": F40E,
     "play-protected-content": F40F,
     "playlist-check": F5C7,
@@ -1575,6 +1642,7 @@ $mdi-icons: (
     "regex": F451,
     "relative-scale": F452,
     "reload": F453,
+    "reminder": F88B,
     "remote": F454,
     "rename-box": F455,
     "reorder-horizontal": F687,
@@ -1601,6 +1669,7 @@ $mdi-icons: (
     "road-variant": F462,
     "robot": F6A8,
     "rocket": F463,
+    "room-service": F88C,
     "roomba": F70C,
     "rotate-3d": F464,
     "rotate-left": F465,
@@ -1617,6 +1686,7 @@ $mdi-icons: (
     "run": F70D,
     "run-fast": F46E,
     "sale": F46F,
+    "salesforce": F88D,
     "sass": F7EB,
     "satellite": F470,
     "satellite-variant": F471,
@@ -1642,6 +1712,7 @@ $mdi-icons: (
     "seat-recline-extra": F481,
     "seat-recline-normal": F482,
     "security": F483,
+    "security-account": F88E,
     "security-home": F689,
     "security-network": F484,
     "select": F485,
@@ -1848,6 +1919,7 @@ $mdi-icons: (
     "tag-text-outline": F4FD,
     "target": F4FE,
     "taxi": F4FF,
+    "teach": F88F,
     "teamviewer": F500,
     "telegram": F501,
     "television": F502,
@@ -1873,6 +1945,7 @@ $mdi-icons: (
     "theme-light-dark": F50E,
     "thermometer": F50F,
     "thermometer-lines": F510,
+    "thermostat-box": F890,
     "thought-bubble": F7F5,
     "thought-bubble-outline": F7F6,
     "thumb-down": F511,
@@ -1909,6 +1982,7 @@ $mdi-icons: (
     "tower-fire": F681,
     "towing": F83B,
     "trackpad": F7F7,
+    "tractor": F891,
     "traffic-light": F52B,
     "train": F52C,
     "tram": F52D,
@@ -1977,6 +2051,7 @@ $mdi-icons: (
     "vector-difference": F55A,
     "vector-difference-ab": F55B,
     "vector-difference-ba": F55C,
+    "vector-ellipse": F892,
     "vector-intersection": F55D,
     "vector-line": F55E,
     "vector-point": F55F,
@@ -2018,6 +2093,7 @@ $mdi-icons: (
     "view-week": F576,
     "vimeo": F577,
     "violin": F60F,
+    "virtual-reality": F893,
     "visualstudio": F610,
     "vk": F579,
     "vk-box": F57A,
@@ -2044,7 +2120,10 @@ $mdi-icons: (
     "washing-machine": F729,
     "watch": F589,
     "watch-export": F58A,
+    "watch-export-variant": F894,
     "watch-import": F58B,
+    "watch-import-variant": F895,
+    "watch-variant": F896,
     "watch-vibrate": F6B0,
     "water": F58C,
     "water-off": F58D,
@@ -2055,6 +2134,7 @@ $mdi-icons: (
     "weather-cloudy": F590,
     "weather-fog": F591,
     "weather-hail": F592,
+    "weather-hurricane": F897,
     "weather-lightning": F593,
     "weather-lightning-rainy": F67D,
     "weather-night": F594,
